--- a/css/style.css
+++ b/css/style.css
@@ -604,3 +604,11 @@ b, strong {
     vertical-align: top;
   }
 }
+
+.full-screen {
+  height: 100vh; /* Ensures full height of the viewport */
+  background-size: cover;
+}
+#resume{
+  margin-top: 100px;
+}
