--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,10 @@
-/**
- * WEBSITE: https://themefisher.com
- * TWITTER: https://twitter.com/themefisher
- * FACEBOOK: https://www.facebook.com/themefisher
- * GITHUB: https://github.com/themefisher/
- */
 
 /*  typography */
+
 @import url("https://fonts.googleapis.com/css?family=Playfair+Display:700|Roboto:400");
+html{
+  scroll-behavior: smooth;;
+}
 body {
   line-height: 1.2;
   font-family: "Roboto", sans-serif;
